# raytracer

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  build_me.sh  docusaurus.config.js  imgui.ini  package-lock.json
.github/workflows/: deploy.yml  mirror.yml
docs/: Doxyfile.in  README.md  add-new-features.md  configuration.md  execution.md  features.md  get-started.md
docs/configuration/: _category_.json  camera.md  example.md  lights.md  materials.md  miscellaneous.md  primitives.md
docs/installation/: _category_.json  docker.md  from_source.md
libs/cmake/imgui/: CMakeLists.txt
libs/cmake/imgui-sfml/: CMakeLists.txt
scenes/: cyl.cfg  default.cfg  fast.cfg  import.cfg  inside_sphere.cfg  sphere.cfg  sphere_light.cfg  translation.cfg
src/: CMakeLists.txt  Exceptions.hpp  Ray.hpp
src/Camera/: CMakeLists.txt  ICamera.hpp
src/Camera/src/: Camera.hpp
src/Cameras/: CMakeLists.txt  ICamera.hpp
src/Cameras/src/: Camera.cpp  Camera.hpp
src/Core/: CMakeLists.txt
src/Core/src/: Main.cpp  Raytracer.cpp  Raytracer.hpp  main.cpp
src/Core/src/Images/: Images.hpp
src/Core/src/Parser/: Parser.cpp  Parser.hpp
src/Core/src/Scene/: Scene.hpp
src/Displays/: IDisplay.hpp
src/Displays/SFML/: CMakeLists.txt
src/Displays/SFML/src/: SFML.cpp  SFML.hpp
src/Math/: Math.hpp  Matrix3.hpp  Ray.hpp  Vector3.hpp
src/Parser/: CMakeLists.txt
src/Plugins/: CMakeLists.txt  IPrimitive.hpp
src/Plugins/Cameras/: CMakeLists.txt  ICamera.hpp
src/Plugins/Cameras/src/: Camera.cpp  Camera.hpp
src/Plugins/Displays/: IDisplay.hpp
src/Plugins/Displays/SFML/: CMakeLists.txt
src/Plugins/Displays/SFML/src/: SFML.cpp  SFML.hpp
src/Plugins/Lights/: ALight.hpp  CMakeLists.txt  ILight.hpp
src/Plugins/Lights/AmbientLight/: CMakeLists.txt
src/Plugins/Lights/AmbientLight/src/: AmbientLight.cpp  AmbientLight.hpp
src/Plugins/Lights/DirectionalLight/: CMakeLists.txt
src/Plugins/Lights/DirectionalLight/src/: DirectionalLight.cpp  DirectionalLight.hpp
src/Plugins/Lights/PointLight/: CMakeLists.txt
src/Plugins/Lights/PointLight/src/: PointLight.cpp  PointLight.hpp
src/Plugins/Materials/: CMakeLists.txt  IMaterial.hpp
src/Plugins/Materials/FlatColor/: CMakeLists.txt
src/Plugins/Materials/FlatColor/src/: FlatColor.cpp  FlatColor.hpp
src/Plugins/Materials/UVColor/: CMakeLists.txt
src/Plugins/Materials/UVColor/src/: UVColor.cpp  UVColor.hpp
src/Plugins/Primitives/: APrimitive.hpp  CMakeLists.txt  IPrimitive.hpp
src/Plugins/Primitives/Cone/: CMakeLists.txt
src/Plugins/Primitives/Cone/src/: Cone.cpp  Cone.hpp
src/Plugins/Primitives/Cylinder/: CMakeLists.txt
src/Plugins/Primitives/Cylinder/src/: Cylinder.cpp  Cylinder.hpp
src/Plugins/Primitives/Plane/: CMakeLists.txt
src/Plugins/Primitives/Plane/src/: Plane.cpp  Plane.hpp
src/Plugins/Primitives/Rectangle/: CMakeLists.txt
src/Plugins/Primitives/Rectangle/src/: Rectangle.cpp  Rectangle.hpp
src/Plugins/Primitives/Sphere/: CMakeLists.txt
src/Plugins/Primitives/Sphere/src/: Sphere.cpp  Sphere.hpp
src/Plugins/Primitives/Tetrahedron/: CMakeLists.txt
src/Plugins/Primitives/Tetrahedron/src/: Tetrahedron.cpp  Tetrahedron.hpp
src/Plugins/Primitives/Triangle/: CMakeLists.txt
src/Plugins/Primitives/Triangle/src/: Triangle.cpp  Triangle.hpp
src/Utils/: Color.hpp  DLLoader.hpp  Exceptions.hpp  Utils.hpp
